--- a/css/main.css
+++ b/css/main.css
@@ -4,68 +4,47 @@
   box-sizing: border-box;
   text-decoration: none; }
 
+.mainHistoria, .mainFormacion, .mainSobremi, .mainVoluntariado {
+  padding: 0rem 2rem 0rem 2rem;
+  margin-top: 2rem; }
+
 header .formatoTitulo1 {
   color: blueviolet;
   text-align: center;
-  font-size: 90px;
+  font-size: 50px;
   font-family: 'Caveat', cursive;
-  border: dotted 10px grey;
-  border-radius: 50px;
-  margin: 20px; }
+  border: dotted 5px grey;
+  border-radius: 20px;
+  margin: 10px; }
 
 .menuGeneral {
   font-family: 'Kalam', cursive;
   top: 0;
   z-index: 1;
   width: auto;
-  height: 50px;
-  position: sticky;
-  display: flex;
-  justify-content: center; }
+  height: 15px;
+  position: sticky; }
   .menuGeneral ul {
     display: flex;
-    gap: 20px; }
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center; }
     .menuGeneral ul .menu {
       list-style-type: none;
-      font-size: 20px;
-      font-weight: 600;
+      font-size: 10px;
+      font-weight: 200;
       background-color: #dbc7f1;
-      padding: 8px 7px 8px 7px;
+      padding: 6px 7px 6px 7px;
       border-radius: 50px;
       margin-top: 10px; }
       .menuGeneral ul .menu a {
         color: black; }
 
-h2 {
-  color: blueviolet;
-  font-size: 65px;
-  font-family: 'Caveat', cursive; }
-
-h3 {
-  color: blueviolet;
-  font-size: 40px;
-  font-family: 'Caveat', cursive; }
-
-p {
-  font-size: 20px;
-  font-family: 'Kalam', cursive; }
-
-.formatoFooter {
-  background-color: grey;
-  width: auto;
-  font-size: 20px;
-  font-weight: 600;
-  text-align: right;
-  font-family: 'Kalam', cursive;
-  margin: 4rem 0rem 2rem 0rem; }
-  .formatoFooter p {
-    margin-right: 2rem; }
-
 main .presentacion {
   display: grid;
-  grid-template-areas: "mirada mirada" "video video" "comoSoy comoSoy";
+  grid-template-areas: "mirada" "video" "comoSoy";
   margin: 3rem 0rem 3rem 0rem;
-  gap: 3rem; }
+  gap: 1rem; }
   main .presentacion .mirada {
     grid-area: mirada;
     text-align: center; }
@@ -80,14 +59,13 @@ main .presentacion {
     align-items: center; }
     main .presentacion .comoSoy .caracteristicas {
       list-style-type: circle;
-      font-size: 30px;
+      font-size: 20px;
       font-weight: 600;
       font-family: 'Kalam', cursive; }
     main .presentacion .comoSoy .foto {
-      width: 380px;
-      height: 400px;
+      width: 100%;
       border-radius: 50px;
-      margin: 1rem; }
+      margin: 0rem 2rem 0rem 2rem; }
 
 main .galeria {
   grid-area: galeria; }
@@ -104,3 +82,124 @@ main .galeria {
       text-align: center; }
       main .galeria .contenedorFotos .card img {
         width: 100%; }
+
+form {
+  font-family: 'Kalam', cursive;
+  margin: 30px 60px 30px 30px; }
+
+fieldset {
+  font-size: 20px;
+  padding: 40px;
+  border: 1px solid blueviolet;
+  border-radius: 50px;
+  background-color: #dbc7f1; }
+
+legend {
+  font-size: 40px;
+  color: blueviolet; }
+
+.formatoItems {
+  padding: 10px; }
+
+input {
+  font-family: 'Kalam', cursive; }
+
+select {
+  font-family: 'Kalam', cursive; }
+
+.formatoConsulta {
+  display: block;
+  height: 100px;
+  padding: 10px;
+  text-align: left;
+  width: 650px; }
+
+.formatoBotones {
+  text-align: center;
+  margin: auto; }
+
+.formatoBoton {
+  margin: 20px;
+  padding: 8px 7px 8px 7px;
+  border-radius: 50px; }
+
+.formatoPD {
+  text-align: right;
+  font-weight: 600;
+  color: blueviolet;
+  font-size: 25px;
+  margin-top: 20px; }
+
+.formatoFooter {
+  background-color: grey;
+  width: auto;
+  font-weight: 200;
+  text-align: right;
+  font-family: 'Kalam', cursive;
+  margin: 4rem 0rem 2rem 0rem; }
+  .formatoFooter p {
+    margin-right: 2rem;
+    font-size: 15px; }
+
+h2 {
+  color: blueviolet;
+  font-size: 35px;
+  font-family: 'Caveat', cursive; }
+
+h3 {
+  color: blueviolet;
+  font-size: 25px;
+  font-family: 'Caveat', cursive; }
+
+p {
+  font-size: 15px;
+  font-family: 'Kalam', cursive; }
+
+@media only screen and (min-width: 768px) {
+  header .formatoTitulo1 {
+    font-size: 70px;
+    border: dotted 10px grey;
+    border-radius: 50px;
+    margin: 20px; }
+  h2 {
+    font-size: 55px; }
+  h3 {
+    font-size: 35px; }
+  p {
+    font-size: 20px; }
+  .menuGeneral {
+    height: 40px; }
+    .menuGeneral ul {
+      gap: 15px; }
+      .menuGeneral ul .menu {
+        font-size: 15px;
+        font-weight: 600; }
+  .formatoFooter {
+    font-weight: 600; }
+  main .presentacion {
+    display: grid;
+    grid-template-areas: "mirada mirada" "video video" "comoSoy comoSoy";
+    margin: 3rem 0rem 3rem 0rem;
+    gap: 1rem; }
+    main .presentacion .comoSoy {
+      grid-area: comoSoy; }
+      main .presentacion .comoSoy .caracteristicas {
+        font-size: 25px; }
+      main .presentacion .comoSoy .foto {
+        width: 400px; } }
+
+@media only screen and (min-width: 1024px) {
+  header .formatoTitulo1 {
+    font-size: 90px; }
+  h2 {
+    font-size: 65px; }
+  h3 {
+    font-size: 40px; }
+  .menuGeneral {
+    height: 50px; }
+    .menuGeneral ul {
+      gap: 20px; }
+      .menuGeneral ul .menu {
+        font-size: 20px; }
+  .formatoFooter p {
+    font-size: 20px; } }
