--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,3 @@
-@import "utilities/variables";
-
 * {
     margin: 0;
     padding: 0;
@@ -7,137 +5,17 @@
     text-decoration: none;
 }
 
-header {
-    .formatoTitulo1 {
-        color: $color-principal;
-        text-align: center;
-        font-size: 90px;
-        font-family: 'Caveat', cursive;
-        border: dotted 10px grey;
-        border-radius: 50px;
-        margin: 20px;
-    }
-}
-
-.menuGeneral {
-    font-family: 'Kalam', cursive;
-    top: 0;
-    z-index: 1;
-    width: auto;
-    height: 50px;
-    position: sticky;
-    display: flex;
-    justify-content: center;
-
-    ul {
-        display: flex;
-        gap: 20px;
-
-        .menu {
-            list-style-type: none;
-            font-size: 20px;
-            font-weight: 600;
-            background-color: $color-fondo-menu;
-            padding: 8px 7px 8px 7px;
-            border-radius: 50px;
-            margin-top: 10px;
-
-            a {
-                color: $color-parrafos;
-            }
-        }
-    }
-}
-
-h2 {
-    color: $color-principal;
-    font-size: 65px;
-    font-family: 'Caveat', cursive;
-}
-
-h3 {
-    color: $color-principal;
-    font-size: 40px;
-    font-family: 'Caveat', cursive;
-}
-
-p {
-    font-size: 20px;
-    font-family: 'Kalam', cursive;
-}
-
-.formatoFooter {
-    background-color: $color-secundario;
-    width: auto;
-    font-size: 20px;
-    font-weight: 600;
-    text-align: right;
-    font-family: 'Kalam', cursive;
-    margin: 4rem 0rem 2rem 0rem;
-
-    p {
-        margin-right: 2rem;
-    }
-}
-
-main {
-    .presentacion {
-        display: grid;
-        grid-template-areas: "mirada mirada"
-            "video video"
-            "comoSoy comoSoy";
-        margin: 3rem 0rem 3rem 0rem;
-        gap: 3rem;
-
-        .mirada {
-            grid-area: mirada;
-            text-align: center;
-        }
-
-        .video {
-            grid-area: video;
-            width: 100%;
-        }
-
-        .comoSoy {
-            grid-area: comoSoy;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            align-items: center;
-            .caracteristicas{
-                list-style-type: circle;
-                font-size: 30px;
-                font-weight: 600;
-                font-family: 'Kalam', cursive;
-            } 
-            .foto{
-                width: 380px;
-                height: 400px;
-                border-radius: 50px;
-                margin: 1rem;
-            }    
-        }
-    }
-
-    .galeria{
-        grid-area: galeria;
-        .fotitos{
-            text-align: center;
-        }
-        .contenedorFotos{
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-            .card{
-                background-color: rgb(153, 153, 153);
-                width: 18rem;
-                text-align: center;
-                img {
-                    width: 100%;
-                }                
-            }  
-        }        
-    }   
-}
+@import "utilities/variables";
+@import "utilities/mixin";
+@import "utilities/extend";
+@import "header";
+@import "menu";
+@import "maininicio";
+@import "maincontacto";
+@import "mainhistoria";
+@import "mainformacion";
+@import "mainsobremi";
+@import "mainvoluntariado";
+@import "footer";
+@import "textos";
+@import "mediaqueries";
